--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,16 +1,40 @@
-footer {
-  padding: 1rem 0;
-    position: fixed;
-    bottom: 0;
-    width: max-content;
-    left: 50%;
-    transform: translateX(-50%);
+html,
+body,
+#root {
+  height: 100%;
+  margin: 0;
+}
+
+.Contact {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .layout {
-  padding-bottom: 3rem; /* Height of the footer */
-  box-sizing: border-box;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
   margin: 0 10%;
 }
 
-@import '~bootstrap/scss/bootstrap';
+main {
+  flex: 1;
+}
+
+footer {
+  width: 100%;
+  height: 3rem;
+  margin-top: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@import "~bootstrap/scss/bootstrap";
