--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,23 @@ body,
   margin: 0;
 }
 
+header {
+  display: flex;
+}
+
+main {
+  flex: 1;
+}
+
+footer {
+  width: 100%;
+  height: 3rem;
+  margin-top: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .Contact {
   display: flex;
   flex-direction: column;
@@ -21,20 +38,7 @@ body,
   flex: 1;
   display: flex;
   flex-direction: column;
-  margin: 0 10%;
-}
-
-main {
-  flex: 1;
-}
-
-footer {
-  width: 100%;
-  height: 3rem;
-  margin-top: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  margin: 0 5%;
 }
 
 @import "~bootstrap/scss/bootstrap";
