--- a/src/styles/components/Checkout.scss
+++ b/src/styles/components/Checkout.scss
@@ -10,6 +10,10 @@
 }
 
 @media (max-width: 767.98px) {
+  .table thead {
+    display: none;
+  }
+
   .checkout-item {
     display: block;
     margin-bottom: 1rem;
