--- a/src/styles/components/CartIcon.scss
+++ b/src/styles/components/CartIcon.scss
@@ -1,3 +1,11 @@
 .cart-icon {
   padding: 15px;
 }
+
+@media (max-width: 992px) {
+  .cart-icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+}
