--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -41,7 +41,7 @@ footer {
   flex: 1;
   display: flex;
   flex-direction: column;
-  margin: 0 5%;
+  margin: 0;
 }
 
 @import "~bootstrap/scss/bootstrap";
