--- a/src/styles/components/CartIcon.scss
+++ b/src/styles/components/CartIcon.scss
@@ -5,7 +5,7 @@
 @media (max-width: 992px) {
   .cart-icon {
     position: absolute;
-    right: 0;
-    top: 0;
+    right: 1rem;
+    top: 0.15rem;
   }
 }
