--- a/src/styles/components/NavBar.scss
+++ b/src/styles/components/NavBar.scss
@@ -1,5 +1,9 @@
 @media (max-width: 992px) {
   .navbar-toggler {
-    margin-right: 2.5em;
+    margin-right: 3.5em;
+  }
+
+  .navbar-collapse {
+    margin: 0;
   }
 }
