Refactor styles: replace bootstrap import with custom.scss for theme color management

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,4 +5,4 @@
 @import "components/ProductCard.scss";
 @import "components/ProductDetail.scss";
 @import "components/SearchBar.scss";
-@import "~bootstrap/scss/bootstrap";
+@import "custom.scss";
