Refactor layout styles: remove background colors from Header and Footer components; update CartIcon styles for better organization

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,6 +10,7 @@ header {
   position: sticky;
   top: 0;
   z-index: 1000;
+  background-color: #f9ffde;
 }
 
 main {
@@ -23,6 +24,8 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #f9ffde;
+  text-align: center;
 }
 
 .Contact {
